fix overflow on caption

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -188,7 +188,7 @@
 .homepost{
   display: block;
   position: relative;
-  height: 600px;
+  height: 570px;
   width: 500px;
   background-color: hotpink;
   border: 4px solid rgb(33, 33, 33);
@@ -206,17 +206,21 @@
   top: -2%;
   left: 10px;
 }
-.caption{
+.home-post-caption{
   position: relative;
   font-size: 17px;
   color: white;
   top: -2%;
-  left: 10px;
+  left: px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .caplink{
   color: black;
   text-decoration: none;
   font-weight: normal;
+  font-size: 20px;
   
 }
 .caplink:hover{
